added recipes to index such as pav bhaji dosa and aloo tikki

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>ODIN RECIPES</h1>
+    <p><a href="/recipes/pav_bhaji.html "> Pav Bhaji</a></p>
+    <p><a href="/recipes/dosa.html "> Dosa</a></p>
+    <p><a href="/recipes/aloo-tikki.html ">Aloo tikki</a></p>
 </body>
 </html>
